Prevent display overflow with large numbers

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -36,7 +36,7 @@ button:hover {
 	border: none;
 	text-align: right;
 	color: white;
-	font-size: 1.6em;
+	font-size: 1.7em;
 	font-family: monospace;
 }
 
